# agent-owl

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  atum_mcp_server.py  pyproject.toml  setup.sh
.claude-plugin/: plugin.json
atum_audit/: __init__.py  __main__.py  _utils.py  agent.py  annexe_iv.py  compliance.py  discovery.py  hasher.py  ontology-shacl.ttl  ontology.ttl  report.py  store.py  validator.py
atum_audit/templates/: report.html.j2  report.md.j2
hooks/: atum-compliance-check.py  atum-post-write.py  atum-session-start.py  hooks.json
mcp-configs/: atum-audit.json
tests/: test_agent.py  test_annexe_iv.py  test_compliance.py  test_discovery.py  test_multi_project.py  test_report.py  test_validator.py
