[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atum-audit-agent"
version = "2.0.0"
description = "Cryptographic file integrity agent with OWL ontology audit trail and EU AI Act compliance"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "rdflib>=7.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
shacl = ["pyshacl>=0.26"]
report = ["jinja2>=3.1"]
server = ["mcp[cli]>=1.0"]
all = ["pyshacl>=0.26", "jinja2>=3.1", "mcp[cli]>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy",
    "ruff",
    "pyshacl>=0.26",
    "jinja2>=3.1",
]

[project.urls]
Repository = "https://github.com/arnwaldn/agent-owl"

[project.scripts]
atum-audit = "atum_audit.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["atum_audit"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
